# CC5905

./: README.md  pyproject.toml  requirements.txt  static_type_system.py
src/gradual/: definitions.py  evidence.py  functions.py  propositions.py  subtyping.py  types.py  validations.py
src/gradual/evidence/: definitions.py  functions.py  subtyping.py  validations.py
src/static/: definitions.py  functions.py  preposition.py  propositions.py  subtyping.py  types.py  validations.py
tests/gradual/: test_evidence.py  test_functions.py  test_validation.py
tests/static/: test_functions.py  test_validation.py  test_validations.py
